[package]
name = "dtps-http"
version = "0.1.0"
edition = "2021"
build = "rust/build.rs"

[lib]
path = "rust/src/lib.rs"

[dependencies]
anyhow = { version = "1", features = ["std", "backtrace"] }
async-recursion = "1"
async-trait = "0.1"
base64 = "0.21"
broadcast = "0.1"
bs58 = "0.5"
bytes = { version = "1", features = ["serde"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
colored = "2"
derive_more = "0.99"
env_logger = "0.10.0"
futures = "0.3"
gethostname = "0.4.3"
hex = { version = "0.4.3", features = ["serde"] }
http = "0.2.9"
hyper = { version = "0.14.27", features = ["full"] }
hyperlocal = "0.8.0"
include_dir = "0.7.3"
indent = "0.1.1"
log = "0.4.19"
maplit = "1"
maud = "0.25.0"
mime = "0.3.17"
mime_guess = "2"
path-clean = "1"
rand = "0"
schemars = { version = "0", features = ["bytes", "rust_decimal", "url", "chrono", "either", "impl_json_schema"] }
serde = { version = "1", features = ["derive"] }
serde-bytes-repr = "0.1.5"
serde_bytes = "0.11.11"
serde_cbor = { version = "0.11.2", features = ["tags", "unsealed_read_write"] }
serde_json = "1"
serde_yaml = "0.9.22"
sha256 = "1"
strum = "0.25.0"
strum_macros = "0.25.0"
thiserror = "1.0.43"
tungstenite = "0.19"
url = "2"
warp = "0.3.5"
json-patch = "*"
strip-ansi-escapes = "0.2.0"

[target.'cfg(target_os = "wasi")'.dependencies]
js-sys = "0.3"
tokio = { version = "1", features = ["sync", "macros", "io-util", "rt", "time"] }
tokio-tungstenite = { version = "0.19.0", features = [] }
websocket = { version = "0.26.5", default-features = false, features = [] }
wasm-bindgen = "0.2.87"


[target.'cfg(not(target_os = "wasi"))'.dependencies]
hyper-tls = "0.5.0"
openssl = { version = "*", features = ["vendored"] } #https://docs.rs/openssl/0.10.34/openssl/#vendored
openssl-sys = "0.9"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tokio-tungstenite = { version = "0.19.0", features = ["rustls", "rustls-native-certs", "rustls-tls-native-roots", "rustls-tls-webpki-roots"] }
websocket = "0.26.5"

[target.'cfg(target_os = "linux")'.dependencies]
getaddrs = "0.1.0"



[[bin]]
name = "dtps-http-rs-server-example-clock"
path = "rust/bin/clock.rs"


[[bin]]
name = "dtps-http-rs-client-stats"
path = "rust/bin/stats.rs"


[[bin]]
name = "dtps-http-rs-subscribe"
path = "rust/bin/subscribe.rs"


[build-dependencies]
built = { version = "0.6", features = ["chrono", "git2", "semver"] }
git2 = "0.17.2"
semver = "1.0.17"
chrono = "0.4"

[dev-dependencies]
rstest = "0.18.1"
async-std = { version = "1.12.0", features = ["default", "attributes"] }
