[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"


[tool]
[tool.poetry]
name = "dtps-http"
version = "0.0.0"
description = ""
authors = ["Andrea Censi <AndreaCensi@users.noreply.github.com>"]
packages = [
    { from = "python", include = "dtps_http" },
    { from = "python", include = "dtps_http_programs" },
]
[tool.poetry.dependencies]
python = "^3.10"
coloredlogs = "^15.0.1"
aiohttp = "^3"
cbor2 = "^5.4.1"
tcp_latency = "0.0.12"
typing_extensions = "^4"
#aiohttp-devtools = "^1.1"
pymdown-extensions = "^10"
aiopubsub = "^3.0"
methodtools = "^0.4"

# other dependencies: aiohttp-devtools pre-commit mkdocs mkdocs-material mkdocstrings[python]


[tool.poetry.scripts]
#dtps-server-example-clock = 'dtps_http_programs:clock_main'
#dtps-client-stats = 'dtps_http_programs:dtps_stats_main'
#dtps-proxy = 'dtps_http_programs:dtps_proxy_main'
#dtps-send-continuous = 'dtps_http_programs:dtps_send_continuous_main'


dtps-http-py-server-example-clock = 'dtps_http_programs:clock_main'
dtps-http-py-client-stats = 'dtps_http_programs:dtps_stats_main'
dtps-http-py-proxy = 'dtps_http_programs:dtps_proxy_main'
dtps-http-py-send-continuous = 'dtps_http_programs:dtps_send_continuous_main'
dtps-http-py-manual-filter = 'dtps_http_programs:dtps_example_manual_filter_main'


[tool.poetry-dynamic-versioning]
enable = true
dirty = false
metadata = false
tagged-metadata = false
vcs = "git"
style = "pep440"
strict = true

# pip install "mkdocstrings[python]"  mkdocs-material

[tool.poetry-dynamic-versioning.substitution]
folders = [
    { path = "src" }
]
