[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"


[tool]
[tool.poetry]
name = "dtps-http"
version = "1.0.13"
description = ""
authors = ["Andrea Censi <AndreaCensi@users.noreply.github.com>"]
packages = [
    { from = "python", include = "dtps" },
    { from = "python", include = "dtps_http" },
    { from = "python", include = "dtps_http_programs" },
]

include = ["static/*"]

[tool.poetry.dependencies]
python = "^3.8"
coloredlogs = "^15"
aiohttp = "^3"
cbor2 = "^5"
tcp_latency = "0.0.12"
typing_extensions = "^4"
pymdown-extensions = "^10"
aiopubsub = "^3"
methodtools = "^0.4"
pydantic = "^1.10"
psutil = "^5"
urllib3 = "^2"
jsonpatch = "^1.33"


# other dependencies: aiohttp-devtools pre-commit mkdocs mkdocs-material mkdocstrings[python]
# pip install "mkdocstrings[python]"  mkdocs-material
timeout-decorator = "^0.5.0"
prettyprinter = "^0.18.0"

[tool.poetry.scripts]

dtps-http-py-server-example-clock = 'dtps_http_programs:clock_main'
dtps-http-py-server = 'dtps_http_programs:server_main'
dtps-http-py-client-stats = 'dtps_http_programs:dtps_stats_main'
dtps-http-py-proxy = 'dtps_http_programs:dtps_proxy_main'
dtps-http-py-send-continuous = 'dtps_http_programs:dtps_send_continuous_main'
dtps-http-py-listen= 'dtps_http_programs:dtps_listen_main'


[tool.poetry-dynamic-versioning]
enable = true
dirty = false
metadata = false
tagged-metadata = false
vcs = "git"
style = "pep440"
strict = true



[tool.poetry-dynamic-versioning.substitution]
folders = [
    { path = "src" }
]
