[package]
name = "dtps_server_demo"
version = "0.1.0"
authors = ["Your Name <your_email@example.com>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
warp = "0.3.5"
tungstenite = "0.19"

maplit = "1.0.2"
uuid = { version = "1.4.0", features = ["v4"] } # // features v4 is for random (version 4) UUIDs

broadcast = "0.1"
chrono = "0.4"
sha256 = "1.1.4"
#opencv = "0.82.1"
