[package]
name = "dtps-http"
version = "0.0.0"
authors = ["Your Name <your_email@example.com>"]
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
warp = "0.3.5"
tungstenite = "0.19"

maplit = "1.0.2"
uuid = { version = "1.4.0", features = ["v4"] } # // features v4 is for random (version 4) UUIDs

broadcast = "0.1"
chrono = "0.4"
sha256 = "1.1.4"
tokio-stream = "0.1.14"
clap = { version = "4.3.11", features = ["derive"] }
md5 = "0.7.0"
#getaddrs = "0.1.0"
#libc = "0.2.147"
#opencv = "0.82.1"


[[bin]]
name = "dtps-http-rust-clock"
path = "bin/clock.rs"
